--- a/data/styles.css
+++ b/data/styles.css
@@ -75,6 +75,13 @@
 .paragraph {
   text-align:left;
 }
+.text_link {
+  color:#0000FF;
+}
+.text_link_mouse_over {
+}
+.text_link_mouse_down {
+}
 .line {
 }
 .arrow {
