--- a/files/定时出账/styles.css
+++ b/files/定时出账/styles.css
@@ -6631,7 +6631,7 @@
   left:0px;
   top:0px;
   width:67px;
-  height:25px;
+  height:26px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -6647,28 +6647,37 @@
   left:705px;
   top:405px;
   width:67px;
-  height:25px;
+  height:26px;
   font-size:16px;
 }
 #u7132_text {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:3px;
+  top:4px;
   width:67px;
   word-wrap:break-word;
 }
 #u7134 {
+  border-width:0px;
   position:absolute;
   left:821px;
-  top:407px;
+  top:405px;
+  width:30px;
+  height:26px;
+  overflow:hidden;
 }
 #u7134_state0 {
-  position:relative;
+  border-width:0px;
+  position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:26px;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
   background-image:none;
 }
 #u7134_state0_content {
@@ -6684,16 +6693,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:30px;
 }
 #u7135 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:0px;
-  width:22px;
-  height:22px;
+  top:-2px;
+  width:30px;
+  height:30px;
 }
 #u7135_text {
   border-width:0px;
@@ -6705,12 +6714,17 @@
   word-wrap:break-word;
 }
 #u7134_state1 {
-  position:relative;
+  border-width:0px;
+  position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:26px;
   visibility:hidden;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
   background-image:none;
 }
 #u7134_state1_content {
@@ -6726,16 +6740,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:30px;
 }
 #u7136 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:0px;
-  width:22px;
-  height:22px;
+  top:-2px;
+  width:30px;
+  height:30px;
 }
 #u7136_text {
   border-width:0px;
@@ -6960,7 +6974,7 @@
   left:0px;
   top:0px;
   width:67px;
-  height:25px;
+  height:26px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -6976,28 +6990,37 @@
   left:705px;
   top:450px;
   width:67px;
-  height:25px;
+  height:26px;
   font-size:16px;
 }
 #u7145_text {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:3px;
+  top:4px;
   width:67px;
   word-wrap:break-word;
 }
 #u7147 {
+  border-width:0px;
   position:absolute;
   left:821px;
-  top:452px;
+  top:450px;
+  width:30px;
+  height:26px;
+  overflow:hidden;
 }
 #u7147_state0 {
-  position:relative;
+  border-width:0px;
+  position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:26px;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
   background-image:none;
 }
 #u7147_state0_content {
@@ -7013,16 +7036,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:30px;
 }
 #u7148 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:0px;
-  width:22px;
-  height:22px;
+  top:-2px;
+  width:30px;
+  height:30px;
 }
 #u7148_text {
   border-width:0px;
@@ -7034,12 +7057,17 @@
   word-wrap:break-word;
 }
 #u7147_state1 {
-  position:relative;
+  border-width:0px;
+  position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:26px;
   visibility:hidden;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
   background-image:none;
 }
 #u7147_state1_content {
@@ -7055,16 +7083,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:30px;
 }
 #u7149 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:0px;
-  width:22px;
-  height:22px;
+  top:-2px;
+  width:30px;
+  height:30px;
 }
 #u7149_text {
   border-width:0px;
@@ -7081,7 +7109,7 @@
   left:0px;
   top:0px;
   width:67px;
-  height:25px;
+  height:26px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -7097,28 +7125,37 @@
   left:705px;
   top:498px;
   width:67px;
-  height:25px;
+  height:26px;
   font-size:16px;
 }
 #u7150_text {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:3px;
+  top:4px;
   width:67px;
   word-wrap:break-word;
 }
 #u7152 {
+  border-width:0px;
   position:absolute;
   left:821px;
-  top:500px;
+  top:498px;
+  width:30px;
+  height:26px;
+  overflow:hidden;
 }
 #u7152_state0 {
-  position:relative;
+  border-width:0px;
+  position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:26px;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
   background-image:none;
 }
 #u7152_state0_content {
@@ -7134,16 +7171,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:30px;
 }
 #u7153 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:0px;
-  width:22px;
-  height:22px;
+  top:-2px;
+  width:30px;
+  height:30px;
 }
 #u7153_text {
   border-width:0px;
@@ -7155,12 +7192,17 @@
   word-wrap:break-word;
 }
 #u7152_state1 {
-  position:relative;
+  border-width:0px;
+  position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:26px;
   visibility:hidden;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
   background-image:none;
 }
 #u7152_state1_content {
@@ -7176,16 +7218,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:30px;
 }
 #u7154 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:0px;
-  width:22px;
-  height:22px;
+  top:-2px;
+  width:30px;
+  height:30px;
 }
 #u7154_text {
   border-width:0px;
