--- a/files/添加户表/styles.css
+++ b/files/添加户表/styles.css
@@ -1098,16 +1098,25 @@
   word-wrap:break-word;
 }
 #u2625 {
+  border-width:0px;
   position:absolute;
   left:818px;
   top:642px;
+  width:30px;
+  height:26px;
+  overflow:hidden;
 }
 #u2625_state0 {
-  position:relative;
+  border-width:0px;
+  position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:26px;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
   background-image:none;
 }
 #u2625_state0_content {
@@ -1123,16 +1132,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:30px;
 }
 #u2626 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:0px;
-  width:22px;
-  height:22px;
+  top:-2px;
+  width:30px;
+  height:30px;
 }
 #u2626_text {
   border-width:0px;
@@ -1144,12 +1153,17 @@
   word-wrap:break-word;
 }
 #u2625_state1 {
-  position:relative;
+  border-width:0px;
+  position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:26px;
   visibility:hidden;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
   background-image:none;
 }
 #u2625_state1_content {
@@ -1165,16 +1179,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:30px;
 }
 #u2627 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:0px;
-  width:22px;
-  height:22px;
+  top:-2px;
+  width:30px;
+  height:30px;
 }
 #u2627_text {
   border-width:0px;
@@ -1186,16 +1200,25 @@
   word-wrap:break-word;
 }
 #u2629 {
+  border-width:0px;
   position:absolute;
   left:818px;
   top:686px;
+  width:30px;
+  height:26px;
+  overflow:hidden;
 }
 #u2629_state0 {
-  position:relative;
+  border-width:0px;
+  position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:26px;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
   background-image:none;
 }
 #u2629_state0_content {
@@ -1211,16 +1234,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:30px;
 }
 #u2630 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:0px;
-  width:22px;
-  height:22px;
+  top:-2px;
+  width:30px;
+  height:30px;
 }
 #u2630_text {
   border-width:0px;
@@ -1232,12 +1255,17 @@
   word-wrap:break-word;
 }
 #u2629_state1 {
-  position:relative;
+  border-width:0px;
+  position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:26px;
   visibility:hidden;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
   background-image:none;
 }
 #u2629_state1_content {
@@ -1253,16 +1281,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:30px;
 }
 #u2631 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:0px;
-  width:22px;
-  height:22px;
+  top:-2px;
+  width:30px;
+  height:30px;
 }
 #u2631_text {
   border-width:0px;
@@ -1274,16 +1302,25 @@
   word-wrap:break-word;
 }
 #u2633 {
+  border-width:0px;
   position:absolute;
   left:818px;
   top:724px;
+  width:30px;
+  height:26px;
+  overflow:hidden;
 }
 #u2633_state0 {
-  position:relative;
+  border-width:0px;
+  position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:26px;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
   background-image:none;
 }
 #u2633_state0_content {
@@ -1299,16 +1336,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:30px;
 }
 #u2634 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:0px;
-  width:22px;
-  height:22px;
+  top:-2px;
+  width:30px;
+  height:30px;
 }
 #u2634_text {
   border-width:0px;
@@ -1320,12 +1357,17 @@
   word-wrap:break-word;
 }
 #u2633_state1 {
-  position:relative;
+  border-width:0px;
+  position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:26px;
   visibility:hidden;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
   background-image:none;
 }
 #u2633_state1_content {
@@ -1341,16 +1383,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:30px;
 }
 #u2635 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:0px;
-  width:22px;
-  height:22px;
+  top:-2px;
+  width:30px;
+  height:30px;
 }
 #u2635_text {
   border-width:0px;
