--- a/files/水价项目/styles.css
+++ b/files/水价项目/styles.css
@@ -6243,16 +6243,25 @@
   word-wrap:break-word;
 }
 #u6443 {
+  border-width:0px;
   position:absolute;
   left:819px;
   top:447px;
+  width:30px;
+  height:26px;
+  overflow:hidden;
 }
 #u6443_state0 {
-  position:relative;
+  border-width:0px;
+  position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:26px;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
   background-image:none;
 }
 #u6443_state0_content {
@@ -6268,16 +6277,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:30px;
 }
 #u6444 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:0px;
-  width:22px;
-  height:22px;
+  top:-2px;
+  width:30px;
+  height:30px;
 }
 #u6444_text {
   border-width:0px;
@@ -6289,12 +6298,17 @@
   word-wrap:break-word;
 }
 #u6443_state1 {
-  position:relative;
+  border-width:0px;
+  position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:26px;
   visibility:hidden;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
   background-image:none;
 }
 #u6443_state1_content {
@@ -6310,16 +6324,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:22px;
-  height:22px;
+  width:30px;
+  height:30px;
 }
 #u6445 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:0px;
-  width:22px;
-  height:22px;
+  top:-2px;
+  width:30px;
+  height:30px;
 }
 #u6445_text {
   border-width:0px;
